--- a/web3/package.json
+++ b/web3/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.8.0",
+    "@chainlink/contracts-ccip": "^0.7.6",
     "@openzeppelin/contracts": "^5.0.0",
     "dotenv": "^16.3.1",
     "hardhat-gas-reporter": "^1.0.9"
