--- a/web3_0/package.json
+++ b/web3_0/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -15,7 +14,9 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.8.0",
-    "@openzeppelin/contracts": "^5.0.1",
-    "dotenv": "^16.3.1"
+    "@chainlink/contracts-ccip": "^0.7.6",
+    "@openzeppelin/contracts": "^5.0.0",
+    "dotenv": "^16.3.1",
+    "hardhat-gas-reporter": "^1.0.9"
   }
 }
