--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "ethers": "^5.5.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-moralis": "^1.4.2",
+    "react-toastify": "^9.1.3",
     "web3uikit": "^1.0.4"
   },
   "devDependencies": {
